cc: Ensure damage in property tree nodes gets propagated to descendants

This propagates damage stored in property tree nodes to descendants, when
damage is copied over from old property trees to new ones. This ensures
that damage is up-to-date even if there are no other reasons to do a
full tree update.

BUG=607423
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review-Url: https://codereview.chromium.org/1948163002
Cr-Commit-Position: refs/heads/master@{#391667}

Former-commit-id: 2da9a217f5c47d24bc75a1c7829b104b26bb5aac